Mobile Menu fixed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </button>
             </div>
         </nav>
-        <div id="mobile-menu" class="hidden md:hidden bg-[#FDF8F0] py-4 transition-transform duration-300 ease-in-out transform -translate-y-full">
+        <div id="mobile-menu" class="hidden md:hidden bg-[#FDF8F0] py-4">
             <a href="#intro" class="block py-2 px-6 text-gray-700 hover:bg-gray-200">Intro</a>
             <a href="#nickelback" class="block py-2 px-6 text-gray-700 hover:bg-gray-200">The Nickel Back</a>
             <a href="#drills" class="block py-2 px-6 text-gray-700 hover:bg-gray-200">Drills</a>
